[package]
name = "selenium_rs"
version = "0.1.0"
authors = ["Yuto TAGASHIRA <ut0s.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
thirtyfour = "0.23.0"
thirtyfour_sync = "0.23.0"
tokio = "1.4.0"
